# qsim

./: CMakeLists.txt  LICENSE  Makefile  README.md
reference/: ghz.py  requirements.txt
reports/deutsch_simon/: deutsch_simon.tex
reports/ghz/: ghz.tex
src/: basis.hpp  circuit.cpp  circuit.hpp  complex.cpp  complex.hpp  const.hpp  deutsch.cpp  err.cpp  ghz.cpp  main.cpp  qubit.cpp  qubit.hpp  simon.cpp  test.cpp  unitary.cpp  unitary.hpp  vec_op.cpp  vec_op.hpp
src/lib/: complex.hpp  gem.cpp  gem.hpp  vec_op.cpp  vec_op.hpp
src/quantum/: basis.hpp  circuit.cpp  circuit.hpp  qubit.cpp  qubit.hpp  unitary.cpp  unitary.hpp
src/utils/: err.cpp  err.hpp
utils/: .python-version
